Fix Step card CSS cropping issue

--- a/src/App.css
+++ b/src/App.css
@@ -38,14 +38,15 @@
 .StepArea {
     position: absolute;
     width: 100%;
-    top: 4.4em;
+    top: 3.6em;
     right: 0;
     bottom: 0;
     left: 0;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: auto;
+/*    flex-direction: column;
+    justify-content: center;*/
+    /*overflow: auto;*/
+      overflow-y: scroll;
 }
 
 code {
