--- a/src/components/Step.css
+++ b/src/components/Step.css
@@ -32,7 +32,7 @@
     z-index: 5;
     width: 90%;
     max-width: 480px;
-    margin: 100px auto;
+    margin: auto;
     background: #FFF;
     box-shadow: rgba(27,6,13,0.4) 0px 8px 40px;
     box-sizing: border-box;
